--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,46 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>apiTest.ValidateAddUpdateGetDeleteAPI</td>
+<td>apiTest.SampleTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>deleteplace</td>
-<td>parallel </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>updatePlaceApi</td>
-<td>parallel </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteNonExistPlace</td>
-<td>parallel </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addPlaceUsingJsonFile</td>
-<td>parallel </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>getUpdatedAddress</td>
-<td>parallel </td>
-</tr>
+<td>testCase</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterClass</td>
+<td>&nbsp;</td></tr>
 </table>
