--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>21/06/01 16:14:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.addPlaceUsingJsonFile()[pri:1, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">addPlaceUsingJsonFile</td> 
-  <td>main@647149086</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 16:15:02</td>   <td>3653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.updatePlaceApi()[pri:2, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">updatePlaceApi</td> 
-  <td>main@647149086</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 16:15:05</td>   <td>6228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">getUpdatedAddress</td> 
-  <td>main@647149086</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 16:15:07</td>   <td>8417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">deleteplace</td> 
-  <td>main@647149086</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 16:15:09</td>   <td>10986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">deleteNonExistPlace</td> 
-  <td>main@647149086</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>0</td> <td title="&gt;&gt;SampleTest.beforeSuite()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>4</td> <td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeTest()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeClass()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeMethod()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.testCase()[pri:0, instance:apiTest.SampleTest@64dafeed]">testCase</td> 
+  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterMethod()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterClass()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>29</td> <td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterTest()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>70</td> <td title="&lt;&lt;SampleTest.afterSuite()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
 </table>
